--- a/env.example
+++ b/env.example
@@ -6,7 +6,13 @@ AUTH_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/auth_db
 CONTRACT_DATABASE_URL=postgresql://postgres:postgres@localhost:5433/contract_db
 PAYMENT_DATABASE_URL=postgresql://postgres:postgres@localhost:5434/payment_db
 DISPUTE_DATABASE_URL=postgresql://postgres:postgres@localhost:5435/dispute_db
-AUDIT_DATABASE_URL=postgres://postgres:postgres@localhost:5436/audit_db?sslmode=disable
+# MongoDB Configuration for Audit Service
+MONGODB_URI=mongodb://audit_user:audit_password@localhost:27017/audit_db?authSource=audit_db
+MONGODB_HOST=localhost
+MONGODB_PORT=27017
+MONGODB_DATABASE=audit_db
+MONGODB_USERNAME=audit_user
+MONGODB_PASSWORD=audit_password
 
 # Service Ports
 GATEWAY_PORT=8080
