--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Databases
   postgres-auth:
@@ -8,10 +6,10 @@ services:
       POSTGRES_DB: auth_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_auth_data:/var/lib/postgresql/data
+    networks:
+      - microservices-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -24,10 +22,10 @@ services:
       POSTGRES_DB: contract_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5433:5432"
     volumes:
       - postgres_contract_data:/var/lib/postgresql/data
+    networks:
+      - microservices-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -40,10 +38,10 @@ services:
       POSTGRES_DB: payment_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5434:5432"
     volumes:
       - postgres_payment_data:/var/lib/postgresql/data
+    networks:
+      - microservices-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -56,10 +54,10 @@ services:
       POSTGRES_DB: dispute_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5435:5432"
     volumes:
       - postgres_dispute_data:/var/lib/postgresql/data
+    networks:
+      - microservices-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -72,11 +70,11 @@ services:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin
       MONGO_INITDB_DATABASE: audit_db
-    ports:
-      - "27017:27017"
     volumes:
       - mongodb_audit_data:/data/db
       - ./scripts/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    networks:
+      - microservices-network
     healthcheck:
       test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
@@ -85,10 +83,10 @@ services:
 
   redis:
     image: redis:7-alpine
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - microservices-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -97,14 +95,13 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
-    ports:
-      - "5672:5672"
-      - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: admin
       RABBITMQ_DEFAULT_PASS: admin
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - microservices-network
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "ping"]
       interval: 10s
@@ -114,16 +111,17 @@ services:
   # Services
   auth-service:
     build:
-      context: ./services/auth
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3001"
-      - "50051:50051"
+      context: .
+      dockerfile: ./services/auth/Dockerfile
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres-auth:5432/auth_db
       JWT_SECRET: ${JWT_SECRET}
       PORT: 3001
       GRPC_PORT: 50051
+    ports:
+      - "50051:50051"
+    networks:
+      - microservices-network
     depends_on:
       postgres-auth:
         condition: service_healthy
@@ -135,15 +133,18 @@ services:
 
   contract-service:
     build:
-      context: ./services/contract
-      dockerfile: Dockerfile
-    ports:
-      - "3002:3002"
+      context: .
+      dockerfile: ./services/contract/Dockerfile
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres-contract:5432/contract_db
       JWT_SECRET: ${JWT_SECRET}
       PORT: 3002
+      GRPC_PORT: 50052
       AUTH_SERVICE_URL: http://auth-service:3001
+    ports:
+      - "50052:50052"
+    networks:
+      - microservices-network
     depends_on:
       postgres-contract:
         condition: service_healthy
@@ -157,15 +158,18 @@ services:
 
   payment-service:
     build:
-      context: ./services/payment
-      dockerfile: Dockerfile
-    ports:
-      - "3003:3003"
+      context: .
+      dockerfile: ./services/payment/Dockerfile
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres-payment:5432/payment_db
       JWT_SECRET: ${JWT_SECRET}
       PORT: 3003
+      GRPC_PORT: 50053
       AUTH_SERVICE_URL: http://auth-service:3001
+    ports:
+      - "50053:50053"
+    networks:
+      - microservices-network
     depends_on:
       postgres-payment:
         condition: service_healthy
@@ -179,15 +183,18 @@ services:
 
   dispute-service:
     build:
-      context: ./services/dispute
-      dockerfile: Dockerfile
-    ports:
-      - "3004:3004"
+      context: .
+      dockerfile: ./services/dispute/Dockerfile
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres-dispute:5432/dispute_db
       JWT_SECRET: ${JWT_SECRET}
       PORT: 3004
+      GRPC_PORT: 50054
       AUTH_SERVICE_URL: http://auth-service:3001
+    ports:
+      - "50054:50054"
+    networks:
+      - microservices-network
     depends_on:
       postgres-dispute:
         condition: service_healthy
@@ -203,11 +210,14 @@ services:
     build:
       context: ./services/notification
       dockerfile: Dockerfile
-    ports:
-      - "8081:8081"
     environment:
       PORT: 8081
+      GRPC_PORT: 50055
       REDIS_URL: redis://redis:6379
+    ports:
+      - "50055:50055"
+    networks:
+      - microservices-network
     depends_on:
       redis:
         condition: service_healthy
@@ -221,11 +231,14 @@ services:
     build:
       context: ./services/audit
       dockerfile: Dockerfile
-    ports:
-      - "8082:8082"
     environment:
       MONGODB_URI: mongodb://audit_user:audit_password@mongodb-audit:27017/audit_db?authSource=audit_db
       PORT: 8082
+      GRPC_PORT: 50056
+    ports:
+      - "50056:50056"
+    networks:
+      - microservices-network
     depends_on:
       mongodb-audit:
         condition: service_healthy
@@ -243,13 +256,15 @@ services:
       - "8080:8080"
     environment:
       PORT: 8080
-      AUTH_SERVICE_URL: http://auth-service:3001
-      CONTRACT_SERVICE_URL: http://contract-service:3002
-      PAYMENT_SERVICE_URL: http://payment-service:3003
-      DISPUTE_SERVICE_URL: http://dispute-service:3004
-      NOTIFICATION_SERVICE_URL: http://notification-service:8081
-      AUDIT_SERVICE_URL: http://audit-service:8082
+      AUTH_GRPC_ADDR: auth-service:50051
+      CONTRACT_GRPC_ADDR: contract-service:50052
+      PAYMENT_GRPC_ADDR: payment-service:50053
+      DISPUTE_GRPC_ADDR: dispute-service:50054
+      NOTIFICATION_GRPC_ADDR: notification-service:50055
+      AUDIT_GRPC_ADDR: audit-service:50056
       JWT_SECRET: ${JWT_SECRET}
+    networks:
+      - microservices-network
     depends_on:
       - auth-service
       - contract-service
@@ -273,6 +288,7 @@ volumes:
   rabbitmq_data:
 
 networks:
-  default:
+  microservices-network:
     driver: bridge
+    name: microservices-network
 
