--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^10.0.0",
@@ -68,6 +69,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "ts-proto": "^1.156.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
