--- a/services/contract/package.json
+++ b/services/contract/package.json
@@ -21,11 +21,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/microservices": "^10.0.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@grpc/grpc-js": "^1.9.0",
+    "@grpc/proto-loader": "^0.7.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "nest-winston": "^1.9.4",
@@ -61,6 +65,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "ts-proto": "^1.156.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
